# bestcalc

./: .gitignore  README.md  __init__.py  a.py  best_calc.py  functional_calculator.py  pyproject.toml
.hypothesis/examples/1d54f8b8385e6264/: 2ded98d948bf496c  6cc2137154922a26  f004298bb10d4629
.hypothesis/examples/2d2ac62fec06330e/: 5e5d37709d609ff4
.hypothesis/examples/5f7d414948ff2d07/: 1d55ada446f58147  9a5860ff873a886a
.hypothesis/examples/6b90f56373e8a86a/: 46fad2adfb1609de
.hypothesis/examples/851e17b0e342e209/: 5293209c9c5d9e40
.hypothesis/examples/96fce0ad4d12a2f7/: 699ffa166aa64c54
.hypothesis/examples/a93d9c39234cd4af/: 106f6a07a3708514  25418b1fc59668cf  3d71e596c789c573  4aaffeef6e2137fc  4e8a6975b90f7cf9  62c1aa81a62dea96  69c5f4cfcab322a8  7af13199625b5c26  90b2f75d0e68a6f5  99b1226224d49c31  be50d3339217f428  eab0ce2a88073bc2  f0828675579dad3c  f7cf09bcecff1055
.hypothesis/examples/b485659db44506f2/: 37f73f5bec7e7f69  a250933fcabb9337
.hypothesis/examples/c787029f88ff2649/: 9b7dd7ae9e7ca159  fcea4ba0c6e9d659
.hypothesis/examples/d3b8410860c8fca9/: 47bc0b5c41a9fcdd  64cc7b8e42747ef9  91622a1687a84599  9ce886648a00ea43  d3a793f067f8a93b
.hypothesis/examples/d55688216172b697/: 2bb71aa70cbbca4d  37ae7de92b9df14f  580ff6022b03927d  5e4bb55cc05f7581  cfebf8a909f7f520
.hypothesis/examples/dd048767bf335738/: 36bd865bc09fb053
.hypothesis/examples/f4b131e8f4a6334e/: 00680054214393fe
.hypothesis/examples/f4b6e1528b824355/: 060937ccd2f8f51c  15a136922712f999  6b31f3fc02149ba3  (+6 more)
tests/: test_best_calc.py  test_functional_calculator.py
